--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.mail.username=info@prog.kiev.ua
 spring.mail.password=----
 spring.mail.properties.mail.smtp.auth=true
 
-#server.port=8081
+server.port=${PORT:8081}
