--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.mail.host=mail.prog.kiev.ua
 #spring.mail.port=25
