--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.mail.password=----
 #spring.mail.properties.mail.smtp.auth=true
 
-server.port=${PORT:8081}
+#server.port=${PORT:8081}
