--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
 <!--            <artifactId>hibernate-core</artifactId>-->
 <!--            <version>5.4.10.Final</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
